# ing1-allegro-2025-5-6.

./: CMakeLists.txt  assets.c  assets.h  game.c  game.h  globals.c  images.h  main  main.c  menu.c  menu.h  movement.c  movement.h  spell.c  spell.h  test  utils.c  utils.h
